<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"



    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">

    <!-- Device Type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="Catetory"
            android:textColor="@android:color/black"

            android:textSize="16sp"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spnr_device_type"
            android:layout_width="0dp"
            style="@style/ReadOnlyStyle"
            android:popupBackground="@android:color/holo_blue_light"
            android:layout_height="match_parent"
            android:layout_weight="50" />

    </LinearLayout>

    <!-- Connected Device -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvw_device_info"
            style="@style/ReadOnlyStyle"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:text="@string/default_device"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/tgbtn_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:onClick="onClickTgBtnConnect"
            android:textOff="@string/connect"
            android:textOn="@string/disconnect" />

    </LinearLayout>

    <!-- UUID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtx_uuid"
            style="@style/MyEditTextstyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:maxLength="36"
            android:text="@string/default_uuid"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_set_uuid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:onClick="onClickBtnSetUuid"
            android:text="*UUID" />

    </LinearLayout>

    <!-- Major / Minor ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtx_major_id"
            style="@style/MyEditTextstyle"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/default_major_id" />

        <Button
            android:id="@+id/btn_set_major_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBtnSetMajorId"
            android:text="*Major" />

        <EditText
            android:id="@+id/edtx_minor_id"
            style="@style/MyEditTextstyle"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_minor_id" />

        <Button
            android:id="@+id/btn_set_minor_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickBtnSetMinorId"
            android:text="*Minor" />

    </LinearLayout>

    <!-- Measured power / LED control -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtx_measured_power"
            style="@style/ReadOnlyStyle"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/default_measured_power" />

        <Button
            android:id="@+id/btn_set_measured_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:onClick="onClickBtnSetMeasuredPower"
            android:text="@string/set" />

        <Spinner
            android:id="@+id/spnr_led"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:popupBackground="@android:color/holo_blue_light"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_set_led"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:onClick="onClickBtnSetLed"
            android:text="@string/set" />

    </LinearLayout>

    <!-- Advertising interval / Output power -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtx_adv_interval"
            style="@style/ReadOnlyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_advertising_interval" />

        <Button
            android:id="@+id/btn_set_adv_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:onClick="onClickBtnSetAdvInterval"
            android:text="@string/set" />

        <Spinner
            android:id="@+id/spnr_output_power"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:popupBackground="@android:color/holo_blue_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_set_output_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:onClick="onClickBtnSetOutputPower"
            android:text="@string/set" />

    </LinearLayout>

    <ListView
        android:id="@+id/lsvw_devicelist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange" />


</LinearLayout>
